# prepwise

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/prepwise/: __init__.py  server.py
src/prepwise/models/: __init__.py  heb.py  preferences.py  recipe.py
src/prepwise/storage/: __init__.py  json_store.py  paths.py
src/prepwise/tools/: __init__.py  favorite_sites.py  heb_cart.py  meal_history.py  preferences.py  recipe_parser.py
