[project]
name = "prepwise"
version = "0.1.0"
description = "MCP server for meal prep assistance - recipe parsing, preferences, and HEB cart automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "recipe-scrapers>=15.0.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prepwise = "prepwise.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prepwise"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
